<resources>
    <string name="app_name">VuelveteCachimbo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Splash Activity -->
    <string name="splash_title">Vuélvete Cachimbo!</string>

    <!-- Filter Activity -->
    <string name="simulacro">SIMULACRO</string>
    <string name="aleatorio">ALEATORIO</string>
    <string name="year">Año</string>
    <string name="area">Área</string>
    <string name="cant">Cantidad</string>
    <string name="enable_clock">Activar Cronómetro</string>
    <string name="start">Iniciar</string>
    
    <!-- Univestity Activity -->
    <string name="label_unmsms">UNMSM</string>
    <string name="labe_uni">UNI</string>
    <string name="label_unac">UNAC</string>
    <string name="label_pucp">PUCP</string>
    
    <!-- Main Activity -->
    <string name="next">SIGUIENTE</string>
    <string name="pass">PASAR</string>

    <!-- Result Activity -->
    <string name="new_test">Nuevo Examen</string>
    <string name="good">Correctas :</string>
    <string name="bad">Incorrectas :</string>
    <string name="none">No contestadas :</string>


    <!-- Main Activity -->
    <string name="default_question">#1 Cuantifique los hiatos y diptongos del enunciado La hidalguía de Mateo cautivó a los estudiantes del aula número seis.</string>

    <!---->
    <string name="nav_item_preference">Albert Camus sostenía lo siguiente: Lo que más sorprende de esta obra es que los</string>
    <string name="nav_item_challenge">Existe una clara relación entre autoestima y auto- concepto como componentes </string>
    <string name="nav_item_training">Si reconocemos que la corrupción es el principal problema de convivencia que afecta a los peruanos y que está muy vinculada a la formación ciudadana deficiente, entonces, para eliminarla</string>
    <string name="nav_item_library">Uno de los factores que influyó en los descu- brimientos geográficos a lo largo de las costas occidentales del África fue la</string>
    <string name="nav_item_messages">Uno de los factores que influyó en los descu- brimientos geográficos a lo largo de las costas occidentales del África fue la</string>
    <string name="nav_item_ranking">Uno de los factores que influyó en los descu- brimientos geográficos a lo largo de las costas occidentales del África fue la</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_preference</item>
        <item>@string/nav_item_challenge</item>
        <item>@string/nav_item_training</item>
        <item>@string/nav_item_library</item>
        <item>@string/nav_item_messages</item>
        <item>@string/nav_item_ranking</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_launcher</item>
    </string-array>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
